fix: table-event-procedure

--- a/docs/de-de/modules/auftraege/pages/angebot.adoc
+++ b/docs/de-de/modules/auftraege/pages/angebot.adoc
@@ -56,7 +56,7 @@ Dokument Angebot manuell erzeugen:
 Du hast Kund:innen individuelle Angebote erstellt, die dazugehörigen Dokumente erzeugt und möchtest diese nun an die Kund:innen senden? Diesen Arbeitsschritt kannst du automatisieren, indem du die passende Ereignisaktion einrichtest. Zum Versenden des Dokuments Angebot als E-Mail Anhang empfehlen wir dir die in <<table-event-procedure-sending-offer-document>> beschriebene Ereignisaktion. Gehe wie im Folgenden beschrieben vor, um die Ereignisaktion einzurichten.
 
 :table-event-procedure: <<table-event-procedure-sending-offer-document>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-event-procedure-sending-offer-document]]
 .Ereignisaktion "Angebot als PDF versenden" einrichten
