--- a/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
@@ -816,7 +816,7 @@ Wenn du möchtest, dass schon beim Eingang eines Auftrags die zugehörigen Liefe
 Da diese Ereignisaktion direkt beim Auftragseingang greift, wird der Status des Hauptauftrags nicht beachtet. Somit werden auch Lieferaufträge von Aufträgen in Status *3.0* (oder *1.0* wenn du mit Auktionsplattformen wie eBay arbeitest) generiert. Diese nehmen beim Generieren den Status des Hauptauftrages an.
 
 :table-event-procedure: <<table-event-procedure-delivery-order-when-new-order>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-event-procedure-delivery-order-when-new-order]]
 .Ereignisaktion "Lieferauftrag generieren bei Auftragseingang" einrichten
@@ -849,7 +849,7 @@ Wenn du möchtest, dass zu einem Auftrag, der in den Status 5.0 (Freigabe Versan
 Nach dem Generieren der Lieferaufträge darfst du den Hauptauftrag nicht mehr ändern, damit die Summe der Artikel der Lieferaufträge der des Hauptauftrags entspricht.
 
 :table-event-procedure: <<table-event-procedure-delivery-order-status-5>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-event-procedure-delivery-order-status-5]]
 .Ereignisaktion "Lieferauftrag generieren bei Wechsel zu Status 5" einrichten
@@ -881,7 +881,7 @@ Wenn du möchtest, dass zu einem Auftrag beim Erzeugen der Rechnung die Lieferau
 Somit kannst du am Hauptauftrag solange Änderungen vornehmen, bis du ihn durch den Rechnungsdruck zum Versand freigibst. Folgende Einstellungen sind nötig:
 
 :table-event-procedure: <<table-event-procedure-invoice-generated>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-event-procedure-invoice-generated]]
 .Ereignisaktion "Lieferauftrag generieren bei Rechnungserzeugung" einrichten
@@ -1580,7 +1580,7 @@ Wird eine Sammelrechnung bezahlt und der Sammelauftrag als bezahlt markiert, wer
 Mithilfe der in plentymarkets verfügbaren Ereignisaktionen kannst du die Sammelrechnung automatisiert generieren, sobald ein Sammelauftrag angelegt wird. Gehe dazu wie nachfolgend beschrieben vor:
 
 :table-event-procedure: <<table-event-procedure-multi-invoice-automatic>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-event-procedure-multi-invoice-automatic]]
 .Ereignisaktion "Sammelrechnung automatisch generieren"
