--- a/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
@@ -458,7 +458,7 @@ Mit einer xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] werden Bew
 
 :table-event-procedure: <<#automatische-bewertungen>>
 
-include::_includes:page$EA-tabbed.adoc[]
+include::_includes:partial$event-procedure-tabbed.adoc[]
 
 [[automatische-bewertungen]]
 .Ereignisaktion zum automatischen Abgeben von Bewertungen für eBay
@@ -604,7 +604,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#automatische-ebay-nachrichten>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[automatische-ebay-nachrichten]]
 .Ereignisaktion zum automatischen Versenden von eBay-Nachrichten
@@ -2116,7 +2116,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-retouren-akzeptieren>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 *_Hinweis:_* Der Status in der Ereignisaktion wurde beispielhaft gewählt. Wähle den Status, der am besten zu deinem Arbeitsablauf passt. Dazu kannst du einen vorhandenen Status wählen oder einen eigenen Status xref:auftraege:auftraege-verwalten.adoc#1220[erstellen].
 
@@ -2156,7 +2156,7 @@ Retouren mit eigenem Etikett kannst du Kund:innen aktuell nur auf ebay.de, ebay.
 
 :table-event-procedure: <<#ereignisaktion-retoure-eigenes-etikett>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 *_Hinweis:_* Der Status in der Ereignisaktion wurde beispielhaft gewählt. Wähle den Status, der am besten zu deinem Arbeitsablauf passt. Dazu kannst du einen vorhandenen Status wählen oder einen eigenen Status xref:auftraege:auftraege-verwalten.adoc#1220[erstellen].
 
@@ -2196,7 +2196,7 @@ Lehne nur Retouren ab, die gegen die Retourenbedingungen verstoßen, die du im M
 
 :table-event-procedure: <<#ereignisaktion-retouren-ablehnen>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 *_Hinweis:_* Der Status in der Ereignisaktion wurde beispielhaft gewählt. Wähle den Status, der am besten zu deinem Arbeitsablauf passt. Dazu kannst du einen vorhandenen Status wählen oder einen eigenen Status xref:auftraege:auftraege-verwalten.adoc#1220[erstellen].
 
@@ -2230,7 +2230,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-teilrückerstattung>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 *_Hinweis:_* Der Status in der Ereignisaktion wurde beispielhaft gewählt. Wähle den Status, der am besten zu deinem Arbeitsablauf passt. Dazu kannst du einen vorhandenen Status wählen oder einen eigenen Status xref:auftraege:auftraege-verwalten.adoc#1220[erstellen].
 
@@ -2270,7 +2270,7 @@ Ein Retourenetikett kannst du entweder wie unten beschrieben per Ereignisaktion 
 
 :table-event-procedure: <<#ereignisaktion-eigenes-etikett>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 *_Hinweis:_* Der Status in der Ereignisaktion wurde beispielhaft gewählt. Wähle den Status, der am besten zu deinem Arbeitsablauf passt. Dazu kannst du einen vorhandenen Status wählen oder einen eigenen Status xref:auftraege:auftraege-verwalten.adoc#1220[erstellen].
 
@@ -2304,7 +2304,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-retoure-markieren>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 *_Hinweis:_* Der Status in der Ereignisaktion wurde beispielhaft gewählt. Wähle den Status, der am besten zu deinem Arbeitsablauf passt. Dazu kannst du einen vorhandenen Status wählen oder einen eigenen Status xref:auftraege:auftraege-verwalten.adoc#1220[erstellen].
 
@@ -2357,7 +2357,7 @@ Die Ereignisaktion kann für eBay Managed Payments in drei verschiedenen Fällen
 
 :table-event-procedure: <<#ereignisaktion-automatische-rückerstattung>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 *_Hinweis:_* Der Status in der Ereignisaktion wurde beispielhaft gewählt. Wähle den Status, der am besten zu deinem Arbeitsablauf passt. Dazu kannst du einen vorhandenen Status wählen oder einen eigenen Status xref:auftraege:auftraege-verwalten.adoc#1220[erstellen].
 
@@ -2396,7 +2396,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-versendete-rückerstattungen>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 *_Hinweis:_* Der Status in der Ereignisaktion wurde beispielhaft gewählt. Wähle den Status, der am besten zu deinem Arbeitsablauf passt. Dazu kannst du einen vorhandenen Status wählen oder einen eigenen Status xref:auftraege:auftraege-verwalten.adoc#1220[erstellen].
 
@@ -2706,7 +2706,7 @@ a| Richte die folgende Ereignisaktion ein. Mit dieser Ereignisaktion informierst
 
 :table-event-procedure: <<#mitteilung-kaufabbruch>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [#9300]
 ==== Kaufabbrüche bearbeiten: Anfragen akzeptieren
@@ -2786,7 +2786,7 @@ Richte zwei xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktionen] ein, u
 
 :table-event-procedure: <<#bezahlte-aufträge-markieren>>
 
-include::_includes:page$EA-tabbed.adoc[]
+include::_includes:partial$event-procedure-tabbed.adoc[]
 
 [[bezahlte-aufträge-markieren]]
 .Ereignisaktion zum automatischen Markieren von bezahlten Aufträgen
@@ -2805,7 +2805,7 @@ include::_includes:page$EA-tabbed.adoc[]
 
 :table-event-procedure: <<#kaufabbruch-automatisch-ablehnen>>
 
-include::_includes:page$EA-tabbed.adoc[]
+include::_includes:partial$event-procedure-tabbed.adoc[]
 
 [[kaufabbruch-automatisch-ablehnen]]
 .Ereignisaktion zum automatischen Ablehnen von Kaufabbrüchen für bezahlte Aufträge
@@ -2878,7 +2878,7 @@ Im Folgenden wird beispielhaft eine Ereignisaktion beschrieben, in der ein Kauf 
 
 :table-event-procedure: <<#tabelle-kaufabbrüche-starten>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[tabelle-kaufabbrüche-starten]]
 .Ereignisaktion, um Kaufabbrüche auf eBay automatisch zu starten
