--- a/docs/de-de/modules/maerkte/pages/flubit.adoc
+++ b/docs/de-de/modules/maerkte/pages/flubit.adoc
@@ -128,7 +128,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-versandbestätigung-flubit>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-versandbestätigung-flubit]]
 .Ereignisaktion zum automatischen Senden von Versandbestätigungen an Flubit
@@ -167,7 +167,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-stornierung-flubit>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-stornierung-flubit]]
 .Ereignisaktion zum automatischen Senden von Stornierungen an Flubit
@@ -199,7 +199,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-retouren-flubit>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-retouren-flubit]]
 .Ereignisaktion zum automatischen Senden von Retouren an Flubit
