--- a/docs/de-de/modules/maerkte/pages/idealo-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/idealo-einrichten.adoc
@@ -985,7 +985,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#versandbestaetigung-idealo>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[versandbestaetigung-idealo]]
 .Ereignisaktion zum automatischen Melden von Versandbestätigungen an idealo
@@ -1017,7 +1017,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#retouren-idealo>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[retouren-idealo]]
 .Ereignisaktion zum automatischen Melden von Retouren an idealo
@@ -1055,7 +1055,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#stornierungen-haendler-idealo>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[stornierungen-haendler-idealo]]
 .Ereignisaktion zum automatischen Melden von Stornierungen durch Händler an idealo
@@ -1085,7 +1085,7 @@ include::_includes:page$EA.adoc[]
 
 :table-event-procedure: <<#stornierungen-kaeufer-idealo>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[stornierungen-kaeufer-idealo]]
 .Ereignisaktion zum automatischen Melden von Stornierungen durch Käufer:innen an idealo
@@ -1115,7 +1115,7 @@ include::_includes:page$EA.adoc[]
 
 :table-event-procedure: <<#stornierungen-kaeufer-akzeptieren-idealo>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[stornierungen-kaeufer-akzeptieren-idealo]]
 .Ereignisaktion, um Stornierungen durch Kund:innen zu akzeptieren
@@ -1153,7 +1153,7 @@ Die Ereignisaktion *Rückerstattung an idealo melden* wird nur für Aufträge au
 
 :table-event-procedure: <<#erstattung-idealo>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[erstattung-idealo]]
 .Ereignisaktion zum automatischen Melden von Rückerstattungen an idealo
