--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -730,7 +730,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-stornierung-limango>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-stornierung-limango]]
 .Ereignisaktion, um Stornierungen an limango zu melden
@@ -801,7 +801,7 @@ Richte als Ereignisaktion 1 für Versandbestätigungen die in <<#ereignisaktion-
 
 :table-event-procedure: <<#ereignisaktion-versandinfo-limango>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-versandinfo-limango]]
 .Ereignisaktion 1 für Versandbestätigungen
@@ -831,7 +831,7 @@ Richte als Ereignisaktion 2 für Versandbestätigungen die in <<#ereignisaktion-
 
 :table-event-procedure: <<#ereignisaktion-warenausgang-limango>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-warenausgang-limango]]
 .Ereignisaktion 2 für Versandbestätigungen
@@ -885,7 +885,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-retouren-limango>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-retouren-limango]]
 .Ereignisaktion zum automatischen Melden von Retouren an limango
