--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -692,7 +692,7 @@ Damit die Tracking-Nummer zusammen mit der Versandbestätigung an OTTO Market ge
 
 :table-event-procedure: <<#dhl-retouren-label-otto>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[dhl-retouren-label-otto]]
 .Ereignisaktion zum Erstellen eines DHL-Retourenlabels
@@ -724,7 +724,7 @@ include::_includes:page$EA.adoc[]
 
 :table-event-procedure: <<#gls-retouren-label-otto>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[gls-retouren-label-otto]]
 .Ereignisaktion zum Erstellen eines GLS-Retourenlabels
@@ -769,7 +769,7 @@ Die Versandbestätigung wird nur an OTTO Market gesendet, wenn die Absenderadres
 
 :table-event-procedure: <<#versandbestaetigung-otto>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[versandbestaetigung-otto]]
 .Ereignisaktion um Versandinformation an OTTO Market zu melden
@@ -802,7 +802,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#auftragsstornierung-otto>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[auftragsstornierung-otto]]
 .Ereignisaktion, um Auftragsstornierungen an OTTO Market zu melden
@@ -844,7 +844,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#retoure-otto>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[retoure-otto]]
 .Ereignisaktion, um Retouren an OTTO Market zu melden
@@ -879,7 +879,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ablehnung-retoure-otto>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ablehnung-retoure-otto]]
 .Ereignisaktion um die Ablehnung einer Retoure an OTTO Market zu melden
