--- a/docs/de-de/modules/maerkte/pages/plus-gartenxxl.adoc
+++ b/docs/de-de/modules/maerkte/pages/plus-gartenxxl.adoc
@@ -552,7 +552,7 @@ Die Marktplätze GartenXXL.de und GartenXXL.at sind seit 28. November 2019 gesch
 
 :table-event-procedure: <<#ereignisaktion-versandbestaetigung>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-versandbestaetigung]]
 .Ereignisaktion zum automatischen Senden von Versandbestätigungen an Netto eStores
@@ -590,7 +590,7 @@ Die Marktplätze GartenXXL.de und GartenXXL.at sind seit 28. November 2019 gesch
 
 :table-event-procedure: <<#ereignisaktion-stornierung>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-stornierung]]
 .Ereignisaktion zum automatischen Senden von Stornierungen an Netto eStores
@@ -628,7 +628,7 @@ Die Marktplätze GartenXXL.de und GartenXXL.at sind seit 28. November 2019 gesch
 
 :table-event-procedure: <<#ereignisaktion-retouren>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-retouren]]
 .Ereignisaktion zum automatischen Senden von Retouren an Netto eStores
