--- a/docs/de-de/modules/maerkte/partials/_galeria.adoc
+++ b/docs/de-de/modules/maerkte/partials/_galeria.adoc
@@ -177,7 +177,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-stornierung-galeria>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-stornierung-galeria]]
 .Ereignisaktion zum automatischen Senden von Stornierungen an GALERIA
@@ -210,7 +210,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-versandbestätigung-galeria>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-versandbestätigung-galeria]]
 .Ereignisaktion, um Versandbestätigungen an GALERIA zu melden
@@ -278,7 +278,7 @@ Für Retouren müssen plentymarkets Retourengründe mit von GALERIA vorgegebenen
 
 :table-event-procedure: <<#ereignisaktion-retouren-galeria>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-retouren-galeria]]
 .Ereignisaktion zum automatischen Melden von Retouren an GALERIA
