--- a/docs/de-de/modules/maerkte/partials/mirakl-EP-order-rejection.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-EP-order-rejection.adoc
@@ -2,7 +2,7 @@
 
 Richte eine <<#automatisierung/ereignisaktionen, Ereignisaktion>> ein, um {market} automatisch über die Ablehnung eines Auftrags zu informieren.
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [#{market}-ereignisaktion-auftragsablehnung]
 .Ereignisaktion, um Auftragsablehnung an {market} zu melden
