--- a/docs/de-de/modules/payment/pages/mollie.adoc
+++ b/docs/de-de/modules/payment/pages/mollie.adoc
@@ -70,7 +70,7 @@ Nutze diese Ereignisaktion, um Mollie mitzuteilen, wenn du einen Auftrag, der mi
 Diese Ereignisaktion kann auch für Lieferaufträge verwendet werden. Der Lieferauftrag wird dann bei Mollie als Teilsendung angemeldet.
 
 :table-event-procedure: <<table-procedure-mollie-transmit-shipment>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-procedure-mollie-transmit-shipment]]
 .Ereignisaktion "Mollie | Versand anmelden"
@@ -99,7 +99,7 @@ Nutze diese Ereignisaktion, um Mollie mitzuteilen, wenn ein Auftrag storniert wu
 _Beachte_, dass ein Auftrag nicht storniert werden kann, solange eine Zahlung noch im Status "pending" ist. Die Ablaufzeit für die jeweiligen Zahlungsarten werden von Mollie vorgegeben und sind link:https://docs.mollie.com/payments/status-changes#expiry-times-per-payment-method[auf dieser Seite^] aufgeführt.
 
 :table-event-procedure: <<table-procedure-mollie-cancellation>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-procedure-mollie-cancellation]]
 .Ereignisaktion "Mollie | Storno anmelden"
@@ -128,7 +128,7 @@ Nutze diese Ereignisaktion, um Mollie mitzuteilen, wenn eine Gutschrift für ein
 Achte beim Anlegen der Gutschrift darauf, dass die Auftragspositionen, die gutgeschrieben werden sollen, auch in der Gutschrift enthalten sind. Mehr Informationen über Gutschriften allgemein findest du im Kapitel xref:auftraege:auftraege-verwalten.adoc#500[Auftragstyp Gutschrift] nutzen im Handbuch.
 
 :table-event-procedure: <<table-procedure-mollie-transmit-refunds>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-procedure-mollie-transmit-refunds]]
 .Ereignisaktion "Mollie | Gutschrift anmelden"
@@ -161,7 +161,7 @@ Im Anschluss an die Aktion *Mollie | Gutschrift anmelden* stehen dir zwei weiter
 Richte optional Ereignisaktionen mit diesen Ereignissen ein, um zu bestimmen, wie du mit diesen Aufträgen weiter verfahren möchtest. Die folgende Ereignisaktion ist ein Beispiel. Entscheide selbst, welcher Ablauf am besten in deine Auftragsbearbeitung passt.
 
 :table-event-procedure: <<table-events-mollie-refunds>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-events-mollie-refunds]]
 .Ereignisaktionen "Mollie Rückzahlung gescheitert" und "Mollie | Rückzahlung erfolgreich"
@@ -194,7 +194,7 @@ Im Anschluss an die Aktion *Mollie | Versand anmelden* stehen dir zwei weitere z
 Richte optional Ereignisaktionen mit diesen Ereignissen ein, um zu bestimmen, wie du mit diesen Aufträgen weiter verfahren möchtest. Die folgende Ereignisaktion ist ein Beispiel. Entscheide selbst, welcher Ablauf am besten in deine Auftragsbearbeitung passt.
 
 :table-event-procedure: <<table-events-mollie-shipments>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-events-mollie-shipments]]
 .Ereignisaktionen "Mollie | Versandanmeldung gescheitert" und "Mollie | Versandanmeldung erfolgreich"
@@ -225,7 +225,7 @@ Dieses Ereignis greift, wenn die Zahlung direkt nach Auftragsanlage scheitert. D
 Richte optional eine Ereignisaktion mit diesem Ereignis ein, um festzulegen, wie du mit solchen Aufträgen weiter verfahren möchtest. Die folgende Ereignisaktion ist ein Beispiel. Entscheide selbst, welcher Ablauf am besten in deine Auftragsbearbeitung passt.
 
 :table-event-procedure: <<table-event-mollie-failed-payment>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-event-mollie-failed-payment]]
 .Ereignisaktionen "Mollie | Zahlung fehlgeschlagen"
