--- a/docs/de-de/modules/payment/pages/payone.adoc
+++ b/docs/de-de/modules/payment/pages/payone.adoc
@@ -208,7 +208,7 @@ Die Einrichtung dieser Ereignisaktion ist zwingend notwendig, wenn in der Grunde
 ====
 
 :table-event-procedure: <<tabelle-ea-versandbestätigung-payone>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[tabelle-ea-versandbestätigung-payone]]
 .Ereignisaktion zum Senden einer automatischen Versandbestätigung an Payone
@@ -236,7 +236,7 @@ include::_includes:page$EA.adoc[]
 Richte eine Ereignisaktion ein, um die Rückzahlung einer Zahlung über Payone zu automatisieren.
 
 :table-event-procedure: <<tabelle-ea-rückzahlung-payone>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[tabelle-ea-rückzahlung-payone]]
 .Ereignisaktion zur automatischen Rückzahlung einer Payone-Zahlung
