--- a/docs/en-gb/modules/markets/pages/amazon-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-setup.adoc
@@ -308,7 +308,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#event-procedure-automatic-return>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [TIP]
 .Event procedures and credit note import
@@ -356,7 +356,7 @@ The following event procedure is used to put the order from status 1 to a status
 
 :table-event-procedure: <<#event-procedure-update-order-status>>
 
-include::_includes:page$EA-tabbed.adoc[]
+include::_includes:partial$event-procedure-tabbed.adoc[]
 
 [[event-procedure-update-order-status]]
 .Event procedure for automatically updating order statuses
