--- a/docs/en-gb/modules/markets/pages/ebay-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/ebay-setup.adoc
@@ -458,7 +458,7 @@ With an xref:automation:event-procedures.adoc#[event procedure], feedback is aut
 
 :table-event-procedure: <<#automatic-feedback>>
 
-include::_includes:page$EA-tabbed.adoc[]
+include::_includes:partial$event-procedure-tabbed.adoc[]
 
 [[automatic-feedback]]
 .Event procedure for automatically posting feedback on eBay
@@ -604,7 +604,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#automatic-ebay-messages>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[automatic-ebay-messages]]
 .Event procedure for automatically sending eBay messages
@@ -2116,7 +2116,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#event-procedure-accepting-returns>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 *_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#1220[create] a new status.
 
@@ -2156,7 +2156,7 @@ Returns with your own label are only available for your customers on ebay.de, eb
 
 :table-event-procedure: <<#event-procedure-return-own-label>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 *_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#1220[create] a new status.
 
@@ -2196,7 +2196,7 @@ Only reject those returns that violate the terms specified in the *Setup » Mark
 
 :table-event-procedure: <<#event-procedure-rejecting-returns>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 *_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#1220[create] a new status.
 
@@ -2230,7 +2230,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to offer your 
 
 :table-event-procedure: <<#event-procedure-partial-refund>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 *_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#1220[create] a new status.
 
@@ -2270,7 +2270,7 @@ You can upload a return label with an event procedure at eBay as described below
 
 :table-event-procedure: <<#event-procedure-own-label>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 *_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#1220[create] a new status.
 
@@ -2304,7 +2304,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to inform eBay
 
 :table-event-procedure: <<#event-procedure-mark-return>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 *_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#1220[create] a new status.
 
@@ -2357,7 +2357,7 @@ The event procedure can be triggered in three different cases if you use eBay Ma
 
 :table-event-procedure: <<#event-procedure-automatic-refund>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 *_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#1220[create] a new status.
 
@@ -2396,7 +2396,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to inform eBay
 
 :table-event-procedure: <<#event-procedure-sent-refunds>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 *_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#1220[create] a new status.
 
@@ -2706,7 +2706,7 @@ a| Set up the following event procedure. This event procedure informs eBay autom
 
 :table-event-procedure: <<#notification-purchase-cancellation>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [#9300]
 ==== Processing purchase cancellations: accept requests
@@ -2786,7 +2786,7 @@ Set up two xref:automation:event-procedures.adoc#[event procedures] to always au
 
 :table-event-procedure: <<#mark-paid-orders>>
 
-include::_includes:page$EA-tabbed.adoc[]
+include::_includes:partial$event-procedure-tabbed.adoc[]
 
 [[mark-paid-orders]]
 .Event procedure for automatically marking paid orders
@@ -2805,7 +2805,7 @@ include::_includes:page$EA-tabbed.adoc[]
 
 :table-event-procedure: <<#automatically-reject-purchase-cancellation>>
 
-include::_includes:page$EA-tabbed.adoc[]
+include::_includes:partial$event-procedure-tabbed.adoc[]
 
 [[automatically-reject-purchase-cancellation]]
 .Event procedure for automatically rejecting purchase cancellations for paid orders
@@ -2878,7 +2878,7 @@ An example of an event procedure for cancelling a purchase because the buyer gav
 
 :table-event-procedure: <<#starting-purchase-cancellations-ebay>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[starting-purchase-cancellations-ebay]]
 .Event procedure for automatically creating purchase cancellations on eBay
