--- a/docs/en-gb/modules/markets/pages/fruugo.adoc
+++ b/docs/en-gb/modules/markets/pages/fruugo.adoc
@@ -160,7 +160,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#event-procedure-order-confirmation-fruugo>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-order-confirmation-fruugo]]
 .Event procedure for automatically sending order confirmations to Fruugo
@@ -192,7 +192,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#event-procedure-shipping-confirmation-fruugo>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-shipping-confirmation-fruugo]]
 .Event procedure for automatically sending shipping confirmations to Fruugo
@@ -224,7 +224,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#event-procedure-cancellations-fruugo>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-cancellations-fruugo]]
 .Event procedure for automatically sending cancellations to Fruugo
@@ -256,7 +256,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#event-procedure-returns-fruugo>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-returns-fruugo]]
 .Event procedure for automatically sending returns to Fruugo
