--- a/docs/en-gb/modules/markets/pages/hood.adoc
+++ b/docs/en-gb/modules/markets/pages/hood.adoc
@@ -109,7 +109,7 @@ Entering feedback texts:
 
 :table-event-procedure: <<#automatic-feedback>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[automatic-feedback]]
 .Event procedure for automatically posting feedback on Hood
@@ -137,7 +137,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#automatic-shipping-confirmation>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[automatic-shipping-confirmation]]
 .Event procedure for automatically sending shipping confirmations to Hood
@@ -165,7 +165,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#automatic-payment-confirmation>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[automatic-payment-confirmation]]
 .Event procedure for automatically sending payment confirmations to Hood
