--- a/docs/en-gb/modules/markets/pages/zalando.adoc
+++ b/docs/en-gb/modules/markets/pages/zalando.adoc
@@ -556,7 +556,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#event-procedure-shipping-confirmation-zalando>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-shipping-confirmation-zalando]]
 .Event procedure for automatically sending shipping confirmations to Zalando
@@ -589,7 +589,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#event-procedure-cancellations-zalando>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-cancellations-zalando]]
 .Event procedure for automatically sending cancellations to Zalando
@@ -624,7 +624,7 @@ IMPORTANT: Return reasons will only be transmitted if the event procedure is use
 
 :table-event-procedure: <<#event-procedure-returns-zalando>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-returns-zalando]]
 .Event procedure for automatically sending returns to Zalando
