--- a/docs/en-gb/modules/markets/partials/invoice-creation.adoc
+++ b/docs/en-gb/modules/markets/partials/invoice-creation.adoc
@@ -58,7 +58,7 @@ Set up the following event procedure to upload invoices created by plentymarkets
 
 :table-event-procedure: <<#event-procedure-uploading-invoice>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-uploading-invoice]]
 .Event procedure for uploading invoices to Amazon
