--- a/docs/en-gb/modules/markets/partials/mirakl-EP-order-confirmation.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-EP-order-confirmation.adoc
@@ -2,7 +2,7 @@
 
 Set up an xref:automation:event-procedures.adoc#[event procedure] to automatically inform {market} about the order confirmation.
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [#{market}-event-procedure-order-confirmation]
 .Event procedure to send an order confirmation to {market}
