--- a/docs/en-gb/modules/orders/pages/managing-orders.adoc
+++ b/docs/en-gb/modules/orders/pages/managing-orders.adoc
@@ -818,7 +818,7 @@ Use the following settings if you want delivery orders to be generated as soon a
 Because this event procedure comes into effect directly upon reception of a new order, the status of the main order is not taken into consideration. Thus, delivery orders will also be created for main orders that are in status *3.0* (or *1.0* if you work with auction platforms such as eBay) and will adopt the status of the main order.
 
 :table-event-procedure: <<table-event-procedure-delivery-order-when-new-order>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-event-procedure-delivery-order-when-new-order]]
 .Options for the event procedure “Create delivery order when order is received”
@@ -851,7 +851,7 @@ Use the following settings if you want delivery orders to be created as soon as 
 Don't change anything at the main order when working with this event procedure. Otherwise, the total item quantities included in the delivery orders will not match the item quantity included in the main order.
 
 :table-event-procedure: <<table-event-procedure-delivery-order-status-5>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-event-procedure-delivery-order-status-5]]
 .Options for the event procedure “Create delivery order when order changes to status 5”
@@ -883,7 +883,7 @@ Use the following settings if you want delivery orders to be created as soon as 
 This allows you to edit the main order as necessary until an invoice is created and the order is cleared for shipping. The following settings are required:
 
 :table-event-procedure: <<table-event-procedure-invoice-generated>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-event-procedure-invoice-generated]]
 .Options for the event procedure “Create delivery order when generating an invoice”
@@ -1628,7 +1628,7 @@ If a customer pays a multi-invoice and the multi-order is marked as paid, the in
 Use the event procedures available in your plentymarkets system to automatically generate a multi-invoice as soon as a multi-order is created. To do so, proceed as described below:
 
 :table-event-procedure: <<table-event-procedure-multi-invoice-automatic>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-event-procedure-multi-invoice-automatic]]
 .Event procedure “Automatically generating a multi-invoice”
