--- a/docs/en-gb/modules/payment/pages/managing-bank-details.adoc
+++ b/docs/en-gb/modules/payment/pages/managing-bank-details.adoc
@@ -625,7 +625,7 @@ Creating an email template:
 The email template is sent with an xref:automation:event-procedures.adoc#[event procedure]. The event procedure is triggered, e.g. whenever a new order is received.
 
 :table-event-procedure: <<table-event-procedure-send-sepa>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-event-procedure-send-sepa]]
 .event procedure for automatically sending SEPA direct debit mandates to customers
