--- a/docs/en-gb/modules/payment/pages/payone.adoc
+++ b/docs/en-gb/modules/payment/pages/payone.adoc
@@ -208,7 +208,7 @@ Setting up the following event procedure is mandatory if you have selected the o
 ====
 
 :table-event-procedure: <<table-procedure-payone-shipping-confirmation>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-procedure-payone-shipping-confirmation]]
 .Event procedure for automatically sending shipping confirmations to Payone
@@ -236,7 +236,7 @@ include::_includes:page$EA.adoc[]
 Set up an event procedure to automatically refund a Payone payment.
 
 :table-event-procedure: <<table-procedure-payone-refund>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-procedure-payone-refund]]
 .Event procedure for automatically refunding Payone payments
