--- a/docs/en-gb/modules/pos/pages/integrating-plentymarkets-pos.adoc
+++ b/docs/en-gb/modules/pos/pages/integrating-plentymarkets-pos.adoc
@@ -1753,7 +1753,7 @@ include::_includes:page$rights.adoc[]
 
 The stock is not reduced automatically when you sell an item. Create the event procedure described below to book outgoing items when a POS order is created. For further information about managing stock, refer to the xref:stock-management:outgoing-items.adoc#[Booking items out] page of the manual.
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-POS-event-procedure-outgoing-items]]
 .Event procedure for booking outgoing items for POS orders
@@ -1894,7 +1894,7 @@ Creating an email template:
 
 Now, create an event procedure that triggers an email to the customer when a receipt is generated.
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-POS-event-procedure-send-receipt]]
 .Event procedure for automatically sending receipts
