--- a/docs/de-de/modules/artikel/pages/gratiszugaben.adoc
+++ b/docs/de-de/modules/artikel/pages/gratiszugaben.adoc
@@ -14,7 +14,7 @@ video::80183219[vimeo]
 
 Du kannst auch Werbegeschenke hinzufügen, die du nicht in deinem plentyShop verkaufen möchtest. Dazu stellst du die Variante auf *unsichtbar* und ordnest die Variante einer Kategorie zu, die nicht für den plentyShop aktiviert ist.
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-event-give-away]]
 .Ereignisaktion für Gratiszugaben
