--- a/docs/de-de/modules/auftraege/pages/auftragsbestaetigung.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftragsbestaetigung.adoc
@@ -56,7 +56,7 @@ Auftragsbestätigung manuell erzeugen:
 Das Erzeugen und Versenden von Auftragsbestätigungen kannst du automatisieren, indem du die entsprechenden Ereignisaktionen einrichtest. So musst du nicht alle deine Auftragseingänge stetig im Blick behalten und jede Auftragsbestätigung einzeln manuell erstellen, sondern kannst deinen Workflow durch die Automatisierung erleichtern. Erstelle zunächst eine Ereignisaktion für die Erzeugung des Dokumentes und im zweiten Schritt eine Ereignisaktion, damit die Auftragsbestätigung per E-Mail an die Kund:in versendet wird. Gehe dafür wie im Folgenden beschrieben vor.
 
 :table-event-procedure: <<table-event-procedure-generate-order-confirmation>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-event-procedure-generate-order-confirmation]]
 .Ereignisaktion "Auftragsbestätigung erzeugen" einrichten
@@ -80,7 +80,7 @@ include::_includes:page$EA.adoc[]
 Möchtest du die Auftragsbestätigung nach Erzeugung direkt als E-Mail-Anhang an deine Kund:in versenden, empfehlen wir die in <<table-event-procedure-send-order-confirmation>> beschriebene Ereignisaktion.
 
 :table-event-procedure: <<table-event-procedure-send-order-confirmation>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-event-procedure-send-order-confirmation]]
 .Ereignisaktion "Auftragsbestätigung versenden" einrichten
