--- a/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
@@ -311,7 +311,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-automatische-retoure>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [TIP]
 .Ereignisaktion und Gutschriftenimport
@@ -359,7 +359,7 @@ Mit der folgenden Ereignisaktion wird der Auftrag von Status 1 in einen Status v
 
 :table-event-procedure: <<#ereignisaktion-auftragsstatus-aktualisieren>>
 
-include::_includes:page$EA-tabbed.adoc[]
+include::_includes:partial$event-procedure-tabbed.adoc[]
 
 [[ereignisaktion-auftragsstatus-aktualisieren]]
 .Ereignisaktion zum automatischen Aktualisieren von Auftragsstatus
