--- a/docs/de-de/modules/maerkte/pages/amazon-fba-nutzen.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-fba-nutzen.adoc
@@ -476,7 +476,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, dam
 
 :table-event-procedure: <<#ereignisaktion-fba-versandfreigabe>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-fba-versandfreigabe]]
 .Ereignisaktion zum automatischen Erteilen von FBA-Versandfreigaben an Amazon
