--- a/docs/de-de/modules/maerkte/pages/best-practices-kaufland-rechnungen-hochladen.adoc
+++ b/docs/de-de/modules/maerkte/pages/best-practices-kaufland-rechnungen-hochladen.adoc
@@ -73,7 +73,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, dam
 
 :table-event-procedure: <<#ereignisaktion-rechnungen-real>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [TIP]
 .Status und Filter für Ereignisaktion
@@ -111,7 +111,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, dam
 
 :table-event-procedure: <<#ea-rechnungen-upload-kaufland>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [TIP]
 .Status und Filter für Ereignisaktion
