--- a/docs/de-de/modules/maerkte/pages/bol-com.adoc
+++ b/docs/de-de/modules/maerkte/pages/bol-com.adoc
@@ -372,7 +372,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-versandbestätigung-bol>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-versandbestätigung-bol]]
 .Ereignisaktion zum automatischen Senden von Versandbestätigungen an bol.com
@@ -417,7 +417,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-stornierungen-bol>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-stornierungen-bol]]
 .Ereignisaktion zum automatischen Senden von Stornierungen an bol.com
@@ -457,7 +457,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 :table-event-procedure: <<#ereignisaktion-retourenstatus-bol>>
 :ea-queue:
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 :!ea-queue:
 
 [[ereignisaktion-retourenstatus-bol]]
@@ -497,7 +497,7 @@ Richte zusätzlich eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisakti
 
 :table-event-procedure: <<#ereignisaktion-retouren-bol>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-retouren-bol]]
 .Ereignisaktion, um bol.com über Retouren zu informieren
