--- a/docs/de-de/modules/maerkte/pages/cdiscount.adoc
+++ b/docs/de-de/modules/maerkte/pages/cdiscount.adoc
@@ -468,7 +468,7 @@ Ein:e Kund:in bestellt zwei Pullover für je 30€ und eine Jacke für 50€ und
 
 :table-event-procedure: <<#ereignisaktion-retouren-cdiscount>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-retouren-cdiscount]]
 .Ereignisaktion zum automatischen Senden von Retouren an Cdiscount
@@ -512,7 +512,7 @@ Damit die Versandbestätigung erfolgreich übermittelt wird, müssen folgende Da
 
 :table-event-procedure: <<#ereignisaktion-auftragsstatus-cdiscount>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-auftragsstatus-cdiscount]]
 .Ereignisaktion zum automatischen Aktualisieren von Auftragsstatus bei Cdiscount
