--- a/docs/de-de/modules/maerkte/pages/etsy.adoc
+++ b/docs/de-de/modules/maerkte/pages/etsy.adoc
@@ -341,7 +341,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#etsy-zahlungsbestaetigung>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[etsy-zahlungsbestaetigung]]
 .Zahlungsbestätigungen automatisch an Etsy senden
@@ -373,7 +373,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#etsy-versandbestaetigung>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[etsy-versandbestaetigung]]
 .Versandbestätigungen automatisch an Etsy senden
