--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -477,7 +477,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#shipping-confirmation-kaufland>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[shipping-confirmation-kaufland]]
 .Ereignisaktion, um Versand an {market} zu melden
@@ -519,7 +519,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, dam
 :table-event-procedure: <<#ereignisaktion-rechnungen-Kaufland>>
 :ea-queue:
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 :!ea-queue:
 
@@ -560,7 +560,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, dam
 :table-event-procedure: <<#ea-rechnungen-upload-Kaufland>>
 :ea-queue:
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 :!ea-queue:
 
@@ -609,7 +609,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 :table-event-procedure: <<#ereignisaktion-stornierungen-Kaufland>>
 :ea-queue:
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 :!ea-queue:
 
@@ -645,7 +645,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#in-fulfillment-kaufland>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[in-fulfillment-kaufland]]
 .Ereignisaktion, um In-Fulfillment-Bestätigung an {market} zu senden
