--- a/docs/de-de/modules/maerkte/pages/mytoys.adoc
+++ b/docs/de-de/modules/maerkte/pages/mytoys.adoc
@@ -874,7 +874,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-stornierung-myToys>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-stornierung-myToys]]
 .Ereignisaktion, um Stornierungen an {market} zu melden
@@ -904,7 +904,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-versandinfo-myToys>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-versandinfo-myToys]]
 .Ereignisaktion für Versandbestätigungen
@@ -953,7 +953,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-retouren-myToys>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-retouren-myToys]]
 .Ereignisaktion zum automatischen Melden von Retouren an {market}
