--- a/docs/de-de/modules/maerkte/pages/rewe.adoc
+++ b/docs/de-de/modules/maerkte/pages/rewe.adoc
@@ -886,7 +886,7 @@ Beispielhaft wird hier eine Ereignisaktion beschrieben, mit der du die Versandbe
 
 :table-event-procedure: <<#rewe-ereignisaktion>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[rewe-ereignisaktion]]
 .Ereignisaktion, um Auftragsstatus an REWE zu melden
