--- a/docs/de-de/modules/maerkte/pages/ricardo-ch.adoc
+++ b/docs/de-de/modules/maerkte/pages/ricardo-ch.adoc
@@ -126,7 +126,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#automatische-bewertungen-ricardo>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[automatische-bewertungen-ricardo]]
 .Ereignisaktion zum automatischen Abgeben von Bewertungen für ricardo.ch
