--- a/docs/de-de/modules/maerkte/pages/shopgate.adoc
+++ b/docs/de-de/modules/maerkte/pages/shopgate.adoc
@@ -249,7 +249,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-stornierungen-shopgate>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-stornierungen-shopgate]]
 .Ereignisaktion zum automatischen Senden von Stornierungen an Shopgate
@@ -281,7 +281,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-retouren-shopgate>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-retouren-shopgate]]
 .Ereignisaktion zum automatischen Senden von Retouren an Shopgate
