--- a/docs/de-de/modules/maerkte/pages/zalando.adoc
+++ b/docs/de-de/modules/maerkte/pages/zalando.adoc
@@ -724,7 +724,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-versandbestätigung-zalando>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-versandbestätigung-zalando]]
 .Ereignisaktion zum automatischen Senden von Versandbestätigungen an Zalando
@@ -757,7 +757,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#ereignisaktion-stornierungen-zalando>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-stornierungen-zalando]]
 .Ereignisaktion zum automatischen Senden von Stornierungen an Zalando
@@ -792,7 +792,7 @@ IMPORTANT: Retourengründe werden nur übermittelt, wenn die Ereignisaktion in K
 
 :table-event-procedure: <<#ereignisaktion-retouren-zalando>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-retouren-zalando]]
 .Ereignisaktion zum automatischen Senden von Retouren an Zalando
