--- a/docs/de-de/modules/maerkte/partials/mirakl-EP-cancellation.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-EP-cancellation.adoc
@@ -2,7 +2,7 @@
 
 Richte eine <<#automatisierung/ereignisaktionen, Ereignisaktion>> ein, um {market} automatisch über die Stornierung eines Auftrags zu informieren.
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [#{market}-ereignisaktion-auftragsstornierung]
 .Ereignisaktion, um Stornierungen an {market} zu melden
