--- a/docs/de-de/modules/maerkte/partials/mirakl-EP-order-confirmation.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-EP-order-confirmation.adoc
@@ -2,7 +2,7 @@
 
 Richte eine <<#automatisierung/ereignisaktionen, Ereignisaktion>> ein, um {market} automatisch über die Auftragsbestätigung zu informieren.
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [#{market}-ereignisaktion-auftragsbestaetigung]
 .Ereignisaktion, um Auftragsbestätigungen an {market} zu melden
