--- a/docs/de-de/modules/maerkte/partials/mirakl-EP-refund.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-EP-refund.adoc
@@ -2,7 +2,7 @@
 
 Richte eine <<#automatisierung/ereignisaktionen, Ereignisaktion>> ein, um {market} automatisch über die Zahlung einer Erstattung zu informieren.
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [#{market}-ereignisaktion-rueckerstattung]
 .Ereignisaktion, um Rückerstattungen an {market} zu melden
