--- a/docs/de-de/modules/maerkte/partials/mirakl-EP-shipping-confirmation.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-EP-shipping-confirmation.adoc
@@ -2,7 +2,7 @@
 
 Richte eine <<#automatisierung/ereignisaktionen, Ereignisaktion>> ein, um automatisch eine Versandbestätigung an {market} zu senden.
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [#{market}-ereignisaktion-versandbestaetigung]
 .Ereignisaktion, um Versandbestätigungen an {market} zu melden
