--- a/docs/de-de/modules/maerkte/partials/rechnungserzeugung.adoc
+++ b/docs/de-de/modules/maerkte/partials/rechnungserzeugung.adoc
@@ -58,7 +58,7 @@ Mit der folgenden Ereignisaktion können Rechnungen bei Amazon hochgeladen werde
 
 :table-event-procedure: <<#ereignisaktion-rechnung-hochladen>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[ereignisaktion-rechnung-hochladen]]
 .Ereignisaktion, um Rechnungen automatisch bei Amazon hochzuladen
