--- a/docs/de-de/modules/payment/pages/bankdaten-verwalten.adoc
+++ b/docs/de-de/modules/payment/pages/bankdaten-verwalten.adoc
@@ -619,7 +619,7 @@ E-Mail-Vorlage erstellen:
 Die E-Mail-Vorlage versendest du z.B. durch eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion], die durch einen neuen Auftrag ausgelöst wird.
 
 :table-event-procedure: <<tabelle-email-template-zahlungseingang>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-send-sepa-to-customer]]
 .Ereignisaktion zum automatischen Senden von SEPA-Lastschriftmandaten an Kunden
