--- a/docs/de-de/modules/payment/pages/klarna.adoc
+++ b/docs/de-de/modules/payment/pages/klarna.adoc
@@ -38,7 +38,7 @@ Richte Ereignisaktionen ein, damit alle benötigten Daten automatisch an Klarna 
 Damit die Zahlung bei Klarna aktiviert wird, muss eine Versandbestätigung gesendet werden. Dafür empfehlen wir die folgende Konfigurationen.
 
 :table-event-procedure: <<tabelle-ea-klarna-versandbestätigung>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[tabelle-ea-klarna-versandbestätigung]]
 .Ereignisaktion Versandbestätigung an Klarna senden
@@ -70,7 +70,7 @@ include::_includes:page$EA.adoc[]
 Im Fall einer Stornierung eines Auftrags muss eine Information an Klarna erfolgen. Dafür empfehlen wir die folgende Konfiguration.
 
 :table-event-procedure: <<tabelle-ea-klarna-stornierung>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[tabelle-ea-klarna-stornierung]]
 .Ereignisaktion Stornierung an Klarna senden
@@ -102,7 +102,7 @@ include::_includes:page$EA.adoc[]
 Im Fall einer Rückerstattung muss eine Information an Klarna erfolgen. Dafür empfehlen wir die folgende Konfiguration.
 
 :table-event-procedure: <<tabelle-ea-klarna-rückerstattung>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[tabelle-ea-klarna-rückerstattung]]
 .Ereignisaktion Rückerstattung an Klarna senden
@@ -134,7 +134,7 @@ include::_includes:page$EA.adoc[]
 Sollte es zwischen Auftragsanlage und Versand zu einer Änderung der Auftragsanschriften kommen, muss dies an Klarna gemeldet werden. Dafür empfehlen wir die folgende Konfiguration
 
 :table-event-procedure: <<tabelle-ea-klarna-anschriftsänderung>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[tabelle-ea-klarna-anschriftsänderung]]
 .Ereignisaktion Änderung der Auftragsanschrift an Klarna senden
@@ -166,7 +166,7 @@ include::_includes:page$EA.adoc[]
 Sollte es zwischen Auftragsanlage und Versand zu einer Änderung an den Auftragspositionen kommen, muss dies an Klarna gemeldet werden. Dafür empfehlen wir die folgende Konfiguration.
 
 :table-event-procedure: <<tabelle-ea-klarna-artikeländerung>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[tabelle-ea-klarna-artikeländerung]]
 .Ereignisaktion Änderung der Artikelpositionen an Klarna senden
