--- a/docs/en-gb/modules/markets/pages/best-practices-kaufland-uploading-invoices.adoc
+++ b/docs/en-gb/modules/markets/pages/best-practices-kaufland-uploading-invoices.adoc
@@ -73,7 +73,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#event-procedure-invoices-kaufland>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [TIP]
 .Status and filters for the event procedure
@@ -111,7 +111,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#event-procedure-invoice-upload-kaufland>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [TIP]
 .Status and filters for the event procedure
