--- a/docs/en-gb/modules/markets/pages/bol-com.adoc
+++ b/docs/en-gb/modules/markets/pages/bol-com.adoc
@@ -372,7 +372,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#event-procedure-shipping-confirmation-bol>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-shipping-confirmation-bol]]
 .Event procedure for automatically sending shipping confirmations to bol.com
@@ -417,7 +417,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#event-procedure-cancellations-bol>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-cancellations-bol]]
 .Event procedure for automatically sending cancellations to bol.com
@@ -457,7 +457,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 :table-event-procedure: <<#event-procedure-return-status-bol>>
 :ea-queue:
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 :!ea-queue:
 
 [[event-procedure-return-status-bol]]
@@ -497,7 +497,7 @@ In addition, set up an xref:automation:event-procedures.adoc#[event procedure] t
 
 :table-event-procedure: <<#event-procedure-return-bol>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-return-bol]]
 .Event procedure to inform bol.com about returns
