--- a/docs/en-gb/modules/markets/pages/etsy.adoc
+++ b/docs/en-gb/modules/markets/pages/etsy.adoc
@@ -341,7 +341,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#etsy-payment-confirmation>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[etsy-payment-confirmation]]
 .Automatically sending payment confirmations to Etsy
@@ -373,7 +373,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#etsy-shipping-confirmation>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[etsy-shipping-confirmation]]
 .Automatically sending shipping confirmations to Etsy
