--- a/docs/en-gb/modules/markets/pages/idealo-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/idealo-setup.adoc
@@ -985,7 +985,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#shipping-confirmation-idealo>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[shipping-confirmation-idealo]]
 .Event procedure for automatically sending shipping confirmations to idealo
@@ -1017,7 +1017,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#returns-idealo>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[returns-idealo]]
 .Event procedure for automatically notifying idealo of returns
@@ -1055,7 +1055,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#cancellations-seller-idealo>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[cancellation-seller-idealo]]
 .Event procedure for automatically notifying idealo of cancellations by seller
@@ -1085,7 +1085,7 @@ include::_includes:page$EA.adoc[]
 
 :table-event-procedure: <<#cancellations-buyer-idealo>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[cancellation-buyer-idealo]]
 .Event procedure for automatically notifying idealo of cancellations by buyer
@@ -1115,7 +1115,7 @@ include::_includes:page$EA.adoc[]
 
 :table-event-procedure: <<#accept-cancellations-buyer-idealo>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[accept-cancellations-buyer-idealo]]
 .Event procedure for automatically accepting cancellations by buyer
@@ -1153,7 +1153,7 @@ The event procedure *Send refund notification to idealo* only is triggered for o
 
 :table-event-procedure: <<#refund-idealo>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[refund-idealo]]
 .Event procedure for automatically notifying idealo of credit notes
