--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -477,7 +477,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#shipping-confirmation-kaufland>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[shipping-confirmation-kaufland]]
 .Event procedure to send shipping confirmations to {market}
@@ -519,7 +519,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 :table-event-procedure: <<#event-procedure-invoices-kaufland>>
 :ea-queue:
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 :!ea-queue:
 
@@ -560,7 +560,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 :table-event-procedure: <<#event-procedure-invoice-upload-kaufland>>
 :ea-queue:
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 :!ea-queue:
 
@@ -609,7 +609,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 :table-event-procedure: <<#event-procedure-cancellations-kaufland>>
 :ea-queue:
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 :!ea-queue:
 
@@ -645,7 +645,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#in-fulfillment-kaufland>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[in-fulfillment-kaufland]]
 .Event procedure to send in fulfilment confirmations to {market}
