--- a/docs/en-gb/modules/markets/pages/limango.adoc
+++ b/docs/en-gb/modules/markets/pages/limango.adoc
@@ -730,7 +730,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#event-procedure-cancellations-limango>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-cancellations-limango]]
 .Event procedure to notify limango of cancellations
@@ -801,7 +801,7 @@ For event procedure 1 for shipping confirmations, set up the xref:automation:eve
 
 :table-event-procedure: <<#event-procedure-shipping-info-limango>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-shipping-info-limango]]
 .Event procedure 1 for shipping confirmations
@@ -831,7 +831,7 @@ For event procedure 2 for shipping confirmations, set up the xref:automation:eve
 
 :table-event-procedure: <<#event-procedure-booking-items-limango>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-booking-items-limango]]
 .Event procedure 2 for shipping confirmations
@@ -885,7 +885,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#event-procedure-returns-limango>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-returns-limango]]
 .Event procedure for automatically sending returns to limango
