--- a/docs/en-gb/modules/markets/pages/plus-gartenxxl.adoc
+++ b/docs/en-gb/modules/markets/pages/plus-gartenxxl.adoc
@@ -550,7 +550,7 @@ The markets GartenXXL.de and GartenXXL.at closed 28 November 2019\. However, you
 
 :table-event-procedure: <<#event-procedure-shipping-confirmation>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-shipping-confirmation-netto]]
 .Event procedure for automatically sending shipping confirmations to Netto eStores
@@ -588,7 +588,7 @@ The markets GartenXXL.de and GartenXXL.at closed 28 November 2019\. However, you
 
 :table-event-procedure: <<#event-procedure-cancellations>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-cancellation-netto]]
 .Event procedure for automatically sending cancellations to Netto eStores
@@ -626,7 +626,7 @@ The markets GartenXXL.de and GartenXXL.at closed 28 November 2019\. However, you
 
 :table-event-procedure: <<#event-procedure-return>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-returns-netto]]
 .Event procedure for autmatically sending returns to Netto eStores
