--- a/docs/en-gb/modules/markets/pages/rewe.adoc
+++ b/docs/en-gb/modules/markets/pages/rewe.adoc
@@ -887,7 +887,7 @@ An example of an event procedure you can use to report the shipping confirmation
 
 :table-event-procedure: <<#rewe-procedure>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[rewe-procedure]]
 .Event procedure for reporting order status to REWE
