--- a/docs/en-gb/modules/markets/pages/ricardo-ch.adoc
+++ b/docs/en-gb/modules/markets/pages/ricardo-ch.adoc
@@ -126,7 +126,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#automatic-feedback-ricardo>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[automatic-feedback-ricardo]]
 .Event procedure for automatically posting feedback on ricardo.ch
