--- a/docs/en-gb/modules/markets/pages/shopgate.adoc
+++ b/docs/en-gb/modules/markets/pages/shopgate.adoc
@@ -283,7 +283,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#event-procedure-cancellations-shopgate>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-cancellations-shopgate]]
 .Event procedure for automatically sending cancellations to Shopgate
@@ -315,7 +315,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#event-procedure-returns-shopgate>>
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[event-procedure-returns-shopgate]]
 .Event procedure for automatically sending returns to Shopgate
