--- a/docs/en-gb/modules/markets/partials/mirakl-EP-cancellation.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-EP-cancellation.adoc
@@ -2,7 +2,7 @@
 
 Set up an xref:automation:event-procedures.adoc#[event procedure] to automatically inform {market} about the cancellation of an order.
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [#{market}-event-procedure-order-cancellation]
 .Event procedure to send an order cancellation to {market}
