--- a/docs/en-gb/modules/markets/partials/mirakl-EP-refund.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-EP-refund.adoc
@@ -2,7 +2,7 @@
 
 Set up an xref:automation:event-procedures.adoc#[event procedure] to automatically inform {market} about refunds.
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [#{market}-event-procedure-refund]
 .Event procedure to send refunds to {market}
