--- a/docs/en-gb/modules/markets/partials/mirakl-EP-send-invoice.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-EP-send-invoice.adoc
@@ -2,7 +2,7 @@
 
 Set up an xref:automation:event-procedures.adoc#[event procedure] to automatically send an invoice to {market}.
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [#{market}-event-procedure-invoice]
 .Event procedure to send an invoice to {market}
