--- a/docs/en-gb/modules/markets/partials/mirakl-EP-shipping-confirmation.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-EP-shipping-confirmation.adoc
@@ -2,7 +2,7 @@
 
 Set up an xref:automation:event-procedures.adoc#[event procedure] to automatically send a shipping confirmation to {market}.
 
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [#{market}-event-procedure-shipping-confirmation]
 .Event procedure to send shipping confirmations to {market}
