--- a/docs/en-gb/modules/orders/pages/generating-order-confirmation.adoc
+++ b/docs/en-gb/modules/orders/pages/generating-order-confirmation.adoc
@@ -56,7 +56,7 @@ Generating a single order confirmation:
 You can set up event procedures to automate generating and sending order confirmations. This way, you don’t have to have an eye on incoming orders at all times and don’t have to generate each order confirmation manually. Instead you can create an easier workflow by automating these events. As a first step, set up an event procedure for generating the document. Then, set up a second event procedure to send the generated order confirmation to your customers. To do so, proceed as follows.
 
 :table-event-procedure: <<table-event-procedure-generate-order-confirmation>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-event-procedure-generate-order-confirmation]]
 .Setting up the event procedure *Generate order confirmation*
@@ -80,7 +80,7 @@ include::_includes:page$EA.adoc[]
 If you want to send the order confirmation to your customers as a PDF attachment in an email directly after the generation, we recommend the event procedure described in <<table-event-procedure-send-order-confirmation>>.
 
 :table-event-procedure: <<table-event-procedure-send-order-confirmation>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-event-procedure-send-order-confirmation]]
 .Setting up the event procedure *Send order confirmation*
