--- a/docs/en-gb/modules/payment/pages/managing-payments.adoc
+++ b/docs/en-gb/modules/payment/pages/managing-payments.adoc
@@ -365,7 +365,7 @@ In order to delete a payment in the overview, proceed as follows.
 In some cases, customers do not pay the full order amount. An incoming partial payment causes the order status to change to 3.3 (Ready for shipping; waiting for payment). As soon as an order has been completely paid for, the status will change to 4 (in preparation for shipping) or 5 (cleared for shipping). Set up an event procedure to automatically request your customers via email to pay the remaining amount.
 
 :table-event-procedure: <<table-event-procedure-email-incoming-payments>>
-include::_includes:page$EA.adoc[]
+include::_includes:partial$event-procedure.adoc[]
 
 [[table-event-procedure-email-incoming-payments]]
 .event procedure for automatically sending an email for incoming payments
